--- a/seekdeeplearning/src/app/globals.css
+++ b/seekdeeplearning/src/app/globals.css
@@ -16,7 +16,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /*--background: #0a0a0a;  removed this because you couldnt see anything on dark mode*/
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
