--- a/seekdeeplearning/src/app/components/seekhoot/joinroom.module.css
+++ b/seekdeeplearning/src/app/components/seekhoot/joinroom.module.css
@@ -1,42 +1,50 @@
 
-
-/* CSS */
-.button7 {
-  background-color: #0095ff;
-  border: 1px solid transparent;
-  border-radius: 3px;
-  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 1.15385;
-  margin: 0;
-  outline: none;
-  padding: 8px .8em;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  white-space: nowrap;
+.entryWindow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.button7:hover,
-.button7:focus {
-  background-color: #07c;
+.errorText {
+    text-align: center;
 }
 
-.button7:focus {
-  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+.blackError {
+    color: black;
 }
 
-.button7:active {
-  background-color: #0064bd;
-  box-shadow: none;
+.redError {
+    color: darkred;
+}
+
+.joinbox {
+    background-color: lightgrey;
+    box-shadow: 10px 10px 5px grey;
+    display: inline-block;
+    border-width: 10px 10px;
+    border-color: lightgrey;
+    border-radius: 5px;
+}
+
+.prompt {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.joinbutton {
+    background-color: lightgrey;
+    text-color: black;
+    padding: 0.75rem 1.5rem;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.joinbutton:hover {
+    background-color: grey;
+}
+
+.joininput {
+    padding: 0.75rem 1.5rem;
+    margin-right: 10px;
 }
