--- a/seekdeeplearning/src/app/components/seekhoot/hootusers.module.css
+++ b/seekdeeplearning/src/app/components/seekhoot/hootusers.module.css
@@ -4,13 +4,38 @@
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
+}
+
+.hootusers {
     background-color: lightgrey;
     color: black;
-    
+    border-radius: 1rem;
+    padding: 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
+}
+
+.miniheader {
+    text-align: center;
+    font-size: 1rem;
+    text-color: black;
 }
 
 .user {
     color: black;
-    background-color: lightblue;
     text-align: center;
+}
+
+.green {
+    background-color: green;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 0.75rem 1.5rem;
+}
+
+.clear {
+
+    background-color: lightgrey;
+    padding: 0.75rem 1.5rem;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
