--- a/seekdeeplearning/src/app/components/seekhoot/joinroom.module.css
+++ b/seekdeeplearning/src/app/components/seekhoot/joinroom.module.css
@@ -1,4 +1,11 @@
 
+.wholeform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20rem;
+}
+
 .entryWindow {
     display: flex;
     align-items: center;
