--- a/seekdeeplearning/src/app/components/seekhoot/nameentry.module.css
+++ b/seekdeeplearning/src/app/components/seekhoot/nameentry.module.css
@@ -1,6 +1,39 @@
 
-import React, { useState } from 'react';
+.wholeform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20rem;
+}
 
-const NameEntry: React.FC<{}> = () => {
+.joinbutton {
+    background-color: lightgrey;
+    text-color: black;
+    padding: 0.75rem 1.5rem;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 
+.joinbutton:hover {
+    background-color: grey;
+}
+
+.joininput {
+    padding: 0.75rem 1.5rem;
+    margin-right: 10px;
+}
+
+.headertext {
+    font-size: 1.5rem;
+    font-color: black;
+    text-align: center;
+}
+
+.joinbox {
+    background-color: lightgrey;
+    box-shadow: 10px 10px 5px grey;
+    display: inline-block;
+    border-width: 10px 10px;
+    border-color: lightgrey;
+    border-radius: 5px;
 }
