--- a/seekdeeplearning/src/app/components/seekhoot/playerrankings.module.css
+++ b/seekdeeplearning/src/app/components/seekhoot/playerrankings.module.css
@@ -9,11 +9,12 @@
     margin: 1rem 1rem 1rem 1rem;
     background-color: lightgrey;
     border-radius: 1rem;
-    width: 50%;
 }
 
 .playersbox {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .miniheader {
